# grillmi

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
backend/: README.md  alembic.ini  pyproject.toml
backend/grillmi/: config.py  db.py  deps.py  logging.py  main.py  middleware.py
backend/grillmi/cli/: _admin_reset_wrapper.sh  admin_init.py  admin_reset.py
backend/grillmi/email/: sender.py  templates.py
backend/grillmi/models/: __init__.py  _common.py  audit_log.py  favorite.py  grillade.py  grillade_item.py  menu.py  menu_item.py  password_reset_token.py  session.py  settings.py  user.py
backend/grillmi/repos/: _lwc.py  audit_log_repo.py  favorites_repo.py  grillade_items_repo.py  grilladen_repo.py  menu_items_repo.py  menus_repo.py  sessions_repo.py  settings_repo.py
backend/grillmi/routes/: _lww.py  _models.py  _serialize.py  auth.py  favorites.py  grilladen.py  health.py  menus.py  settings.py  sync.py
backend/grillmi/security/: argon2.py  csrf.py  device_label.py  headers.py  hibp.py  rate_limit.py
backend/grillmi/services/: account_access.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_user_first_name.py  0003_grillade_item_alarm_state.py
backend/templates/emails/: _base.html  activation.de.html  activation.de.txt  password-reset.de.html  password-reset.de.txt
backend/tests/: conftest.py
backend/tests/integration/: _isolation.py  conftest.py  test_admin_cli.py  (+34 more)
(+213 files in other folders)
